Fixed main menu overflow for long filenames.
https://user-images.githubusercontent.com/498274/27534859-34d6d532-5a1d-11e7-98c3-fec877a062f7.png

--- a/src/css/components/_main-menu.scss
+++ b/src/css/components/_main-menu.scss
@@ -112,6 +112,12 @@
       @include flex(none);
       margin: 0 0 0 auto;
     }
+
+    & .menu-item-text {
+      margin-right: 28px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   & .menu-item.menu-item-compact {
@@ -123,7 +129,7 @@
       content: '';
 
       position: absolute;
-      right: 24px;
+      right: 20px;
 
       display: block;
       width: 8px;
